@@ -1,3 +1,9 @@
+2004-09-30  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* e-msg-composer.c: (autosave_manager_start),
+	(autosave_manager_stop), (create_composer): Use non-deprecated
+	functions.
+
 2004-08-17  Michael Meeks  <michael@ximian.com>
 
 	* e-msg-composer.c (handle_mailto): handle 'attachment' as
